--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/fragment_container_view"
-            android:name="com.mobile_programming.sari_sari_inventory_app.ui.scanner.BarcodeScannerFragment" />
+            android:name="com.mobile_programming.sari_sari_inventory_app.ui.scanner.StockUpScreenFragment" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
