--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="padding_extra_small">4dp</dimen>
     <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_medium">16dp</dimen>
     <dimen name="padding_large">20dp</dimen>
     <dimen name="padding_extra_large">32dp</dimen>
 
     <dimen name="content_padding">8dp</dimen>
+    <dimen name="top_app_bar_height">64dp</dimen>
+    <dimen name="bottom_navigation_height">72dp</dimen>
+    <dimen name="inventory_search_bar_height">48dp</dimen>
+
+    <dimen name="icon_button_small">24dp</dimen>
+    <dimen name="icon_button_medium">32dp</dimen>
+    <dimen name="icon_button_large">36dp</dimen>
+
+    <dimen name="max_text_field_width">488dp</dimen>
 </resources>
