Add FAB to Inventory Screen
This commit adds a Floating Action Button to the inventory screen.
It connects the FAB to the stock up scanner screen.

* Add FAB to inventory screen
* Add "add" icon to FAB
* Add dimens resource for FAB bottom margin
* Add delete product content description string
* Add delete product content description on InventoryItemViewholder bind

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <dimen name="icon_button_large">36dp</dimen>
 
     <dimen name="max_text_field_width">488dp</dimen>
+    <dimen name="fab_bottom_margin">88dp</dimen>
 </resources>
