--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -103,26 +103,36 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <!-- Bottom Navigation -->
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottomAppBar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/bottom_navigation_height"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
-            app:menu="@menu/bottom_navigation_menu" />
+            app:fabAlignmentMode="end"
+            app:fabAnimationMode="slide"
+            app:fabAnchorMode="cradle"
+            app:fabCradleVerticalOffset="@dimen/fab_bottom_app_bar_vert_margin"
+            app:hideOnScroll="true"
+            app:layout_scrollFlags="scroll|enterAlways">
+
+            <!-- Bottom Navigation -->
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomNavigationBar"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bottom_navigation_height"
+                app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
+                app:menu="@menu/bottom_navigation_menu"/>
+
+        </com.google.android.material.bottomappbar.BottomAppBar>
 
         <!-- Floating Action Button -->
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/addProductFAB"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/bottom_navigation_height"
-            android:layout_marginEnd="@dimen/padding_medium"
-            android:layout_marginBottom="@dimen/fab_bottom_margin"
             android:contentDescription="@string/new_product_fab_content_desc"
             app:srcCompat="@drawable/baseline_add_24"
-            app:layout_anchor="@id/bottom_navigation"
-            app:layout_anchorGravity="top|end"
+            app:layout_anchor="@id/bottomAppBar"
             app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
