--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/padding_small"
                 android:layout_marginStart="@dimen/padding_medium"
-                android:maxWidth="@dimen/max_text_field_width"
+                app:layout_constraintWidth_max="@dimen/max_text_field_width"
                 app:boxBackgroundColor="?attr/colorSurfaceContainerHigh"
                 app:boxStrokeWidth="0dp"
                 app:endIconContentDescription="@string/search_bar_clear_content_description"
@@ -106,7 +106,7 @@
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/bottom_navigation_height"
             android:layout_gravity="bottom"
             app:fabAlignmentMode="end"
             app:fabAnimationMode="slide"
@@ -121,7 +121,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/bottom_navigation_height"
                 app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
-                app:menu="@menu/bottom_navigation_menu"/>
+                app:menu="@menu/bottom_navigation_menu"
+                app:elevation="0dp"/>
 
         </com.google.android.material.bottomappbar.BottomAppBar>
 
@@ -129,7 +130,7 @@
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/addProductFAB"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/bottom_navigation_height"
+            android:layout_height="match_parent"
             android:contentDescription="@string/new_product_fab_content_desc"
             app:srcCompat="@drawable/baseline_add_24"
             app:layout_anchor="@id/bottomAppBar"
