--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,7 @@
 
     <dimen name="content_padding">8dp</dimen>
     <dimen name="top_app_bar_height">64dp</dimen>
-    <dimen name="bottom_navigation_height">72dp</dimen>
+    <dimen name="bottom_navigation_height">68dp</dimen>
     <dimen name="inventory_search_bar_height">48dp</dimen>
 
     <dimen name="icon_button_small">24dp</dimen>
@@ -16,8 +16,9 @@
     <dimen name="icon_button_large">36dp</dimen>
 
     <dimen name="max_text_field_width">488dp</dimen>
+    <dimen name="max_button_width">320dp</dimen>
     <dimen name="fab_bottom_app_bar_vert_margin">42dp</dimen>
 
     <dimen name="inventory_item_image_width">64dp</dimen>
-    <dimen name="inventory_item_card_height">72dp</dimen>
+    <dimen name="inventory_item_card_height">80dp</dimen>
 </resources>
