Create Product Entry Screen
This commit creates a product entry screen. This also adds permissions
and functions that start the camera and gallery, and retrieves and
stores images.

* Add Product Entry fragment
* Add drawable, dimension, and string resources
* Fix toProduct() to accommodate a null product number
* Add camera and media access permissions
* Add file paths
* Add image saved location path constant
* Update delete in inventory to delete image file

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,5 @@
 
     <dimen name="inventory_item_image_width">64dp</dimen>
     <dimen name="inventory_item_card_height">80dp</dimen>
+    <dimen name="entry_image_size">128dp</dimen>
 </resources>
