Add Blank Home Screen and Navigation
This commits adds a blank home screen and navigation between
adjacent screen. Future commits will fill the home screen with
necessary content. This commit adds the home screen to set up
proper navigation between other screens.

* Add Home Fragment and layout
* Change navHostFragment ID in activity_main.xml.
* Add HomeViewModel initializer in AppViewModelProvider.
* Change bottom nav bar menu item IDs.
* Change top and bottom bar IDs.
* Add navigation actions between Home, Inventory and Receipt Screens.

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigationHome"
+        android:id="@+id/navigate_home"
         android:icon="@drawable/baseline_home_24"
         android:title="@string/home" />
     <item
-        android:id="@+id/navigationInventory"
+        android:id="@+id/navigate_inventory"
         android:icon="@drawable/baseline_format_list_bulleted_24"
         android:title="@string/inventory" />
     <item
-        android:id="@+id/navigationSell"
+        android:id="@+id/navigate_receipt"
         android:icon="@drawable/baseline_shopping_cart_24"
         android:title="@string/sell" />
     <item
-        android:id="@+id/navigationSettings"
+        android:id="@+id/navigate_settings"
         android:icon="@drawable/baseline_settings_24"
         android:title="@string/settings" />
 </menu>
