--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -19,13 +19,12 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/topAppBar"
+                android:id="@+id/top_app_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/top_app_bar_height"
                 android:fitsSystemWindows="true"
                 android:minHeight="?attr/actionBarSize"
                 app:layout_scrollFlags="scroll|enterAlways"
-                app:navigationIcon="@drawable/baseline_arrow_back_24"
                 app:title="@string/inventory"
                 app:titleCentered="true" />
         </com.google.android.material.appbar.AppBarLayout>
@@ -104,7 +103,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottomAppBar"
+            android:id="@+id/bot_app_bar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/bottom_navigation_height"
             android:layout_gravity="bottom"
@@ -117,7 +116,7 @@
 
             <!-- Bottom Navigation -->
             <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottomNavigationBar"
+                android:id="@+id/bot_nav_bar"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/bottom_navigation_height"
                 app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
@@ -133,7 +132,7 @@
             android:layout_height="match_parent"
             android:contentDescription="@string/new_product_fab_content_desc"
             app:srcCompat="@drawable/baseline_add_24"
-            app:layout_anchor="@id/bottomAppBar"
+            app:layout_anchor="@id/bot_app_bar"
             app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
