--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navigation"
-    app:startDestination="@id/inventoryFragment">
+    app:startDestination="@id/homeFragment">
     <fragment
         android:id="@+id/receiptScreenFragment"
         android:name="com.mobile_programming.sari_sari_inventory_app.ui.receipt.ReceiptScreenFragment"
@@ -10,6 +10,14 @@
         <action
             android:id="@+id/action_receiptScreenFragment2_to_receiptScannerScreenFragment2"
             app:destination="@id/receiptScannerScreenFragment" />
+        <action
+            android:id="@+id/receiptToInventory"
+            app:destination="@id/inventoryFragment" />
+        <action
+            android:id="@+id/action_receiptScreenFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/receiptScannerScreenFragment"
@@ -46,8 +54,13 @@
             android:id="@+id/inventoryToStockUpScanner"
             app:destination="@id/stockUpScannerScreenFragment" />
         <action
-            android:id="@+id/action_inventoryFragment_to_receiptScreenFragment2"
+            android:id="@+id/inventoryToReceipt"
             app:destination="@id/receiptScreenFragment" />
+        <action
+            android:id="@+id/inventoryToHome"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/productDetailsFragment"
@@ -56,5 +69,16 @@
         <argument
             android:name="productId"
             app:argType="long" />
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.mobile_programming.sari_sari_inventory_app.ui.home.HomeFragment"
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/homeToInventory"
+            app:destination="@id/inventoryFragment" />
+        <action
+            android:id="@+id/homeToReceipt"
+            app:destination="@id/receiptScreenFragment" />
     </fragment>
 </navigation>
