--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -4,9 +4,11 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
-            type="com.mobile_programming.sari_sari_inventory_app.ui.product.ProductEntryViewModel" />
+            type="com.mobile_programming.sari_sari_inventory_app.ui.product.ProductDetailsViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -23,11 +25,8 @@
                 android:layout_height="@dimen/top_app_bar_height"
                 android:fitsSystemWindows="true"
                 android:minHeight="?attr/actionBarSize"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:navigationIcon="@drawable/baseline_arrow_back_24"
-                app:menu="@menu/product_entry_top_app_bar_menu"
-                app:title="@string/new_product"
-                app:titleCentered="true" />
+                app:menu="@menu/product_details_top_app_bar_menu"
+                app:navigationIcon="@{viewModel.uiState.editing ? @drawable/baseline_clear_24 : @drawable/baseline_arrow_back_24}" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -35,19 +34,20 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/product_image"
                 android:layout_width="@dimen/entry_image_size"
                 android:layout_height="@dimen/entry_image_size"
                 android:layout_marginVertical="@dimen/padding_medium"
                 android:contentDescription="@string/new_product_image_content_desc"
-                android:src="@drawable/baseline_camera_alt_24"
-                app:contentPadding="@dimen/padding_extra_large"
-                android:scaleType="centerCrop"
-                app:layout_constraintStart_toStartOf="@id/product_number_field"
-                app:layout_constraintTop_toTopOf="parent"
                 android:background="@drawable/dashed_line_border"
                 android:backgroundTint="?attr/colorOutline"
+                android:scaleType="centerCrop"
+                app:contentPadding="@dimen/padding_extra_large"
+                android:src="@drawable/baseline_camera_alt_24"
+                app:layout_constraintStart_toStartOf="@id/product_number_field"
+                app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"/>
 
             <Button
@@ -55,7 +55,8 @@
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/add_product_image"
+                android:enabled="@{viewModel.uiState.editing}"
+                android:text="@string/change_product_image"
                 app:layout_constraintBottom_toTopOf="@id/remove_photo_button"
                 app:layout_constraintEnd_toEndOf="@id/remove_photo_button"
                 app:layout_constraintStart_toStartOf="@id/remove_photo_button"
@@ -66,7 +67,7 @@
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:enabled="@{viewModel.uiState.productDetails.imageUri != null}"
+                android:enabled="@{viewModel.uiState.tempDetails.imageUri != null &amp;&amp; viewModel.uiState.editing}"
                 android:text="@string/remove_product_image"
                 app:layout_constraintBottom_toBottomOf="@id/product_image"
                 app:layout_constraintEnd_toEndOf="@id/product_number_field"
@@ -89,9 +90,10 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:enabled="@{viewModel.uiState.editing}"
                     android:inputType="number"
                     android:maxLines="1"
-                    android:text="@{viewModel.uiState.productDetails.productNumber}" />
+                    android:text="@{viewModel.uiState.editing ? viewModel.uiState.tempDetails.productNumber : viewModel.uiState.productDetails.productNumber}" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -111,10 +113,11 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:enabled="@{viewModel.uiState.editing}"
                     android:inputType="text"
                     android:maxWidth="@dimen/max_text_field_width"
                     android:maxLines="1"
-                    android:text="@{viewModel.uiState.productDetails.productName}" />
+                    android:text="@{viewModel.uiState.editing ? viewModel.uiState.tempDetails.productName : viewModel.uiState.productDetails.productName}" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -134,10 +137,11 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:enabled="@{viewModel.uiState.editing}"
                     android:inputType="numberDecimal"
                     android:maxWidth="@dimen/max_text_field_width"
                     android:maxLines="1"
-                    android:text="@{viewModel.uiState.productDetails.price}" />
+                    android:text="@{viewModel.uiState.editing ? viewModel.uiState.tempDetails.price : viewModel.uiState.productDetails.price}" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -157,10 +161,59 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:enabled="@{viewModel.uiState.editing}"
                     android:inputType="number"
-                    android:text="@{viewModel.uiState.productDetails.stock}" />
+                    android:text="@{viewModel.uiState.editing ? viewModel.uiState.tempDetails.stock : viewModel.uiState.productDetails.stock}" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
+            <!--            <Button-->
+            <!--                android:id="@+id/edit_button"-->
+            <!--                style="@style/Widget.Material3.Button.Icon"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_margin="@dimen/padding_small"-->
+            <!--                android:contentDescription="@string/edit_content_desc"-->
+            <!--                android:text="@string/edit"-->
+            <!--                android:visibility="@{viewModel.uiState.editing ? View.GONE : View.VISIBLE}"-->
+            <!--                app:icon="@drawable/baseline_edit_24"-->
+            <!--                app:iconGravity="textStart"-->
+            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                app:layout_constraintStart_toStartOf="parent"-->
+            <!--                app:layout_constraintWidth_max="@dimen/max_button_width" />-->
+
+            <!--            <Button-->
+            <!--                android:id="@+id/cancel_button"-->
+            <!--                style="@style/Widget.Material3.Button.OutlinedButton.Icon"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_margin="@dimen/padding_small"-->
+            <!--                android:contentDescription="@string/cancel_edit_content_desc"-->
+            <!--                android:text="@string/cancel"-->
+            <!--                android:visibility="@{viewModel.uiState.editing ? View.VISIBLE : View.GONE}"-->
+            <!--                app:icon="@drawable/baseline_clear_24"-->
+            <!--                app:iconGravity="textStart"-->
+            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                app:layout_constraintEnd_toStartOf="@id/save_button"-->
+            <!--                app:layout_constraintStart_toStartOf="parent" />-->
+
+            <!--            <Button-->
+            <!--                android:id="@+id/save_button"-->
+            <!--                style="@style/Widget.Material3.Button.Icon"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_margin="@dimen/padding_small"-->
+            <!--                android:contentDescription="@string/save_edit_content_desc"-->
+            <!--                android:text="@string/save"-->
+            <!--                android:visibility="@{viewModel.uiState.editing ? View.VISIBLE : View.GONE}"-->
+            <!--                app:icon="@drawable/baseline_check_24"-->
+            <!--                app:iconGravity="textStart"-->
+            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                app:layout_constraintStart_toStartOf="parent"-->
+            <!--                app:layout_constraintWidth_max="@dimen/max_button_width" />-->
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
