--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,9 +6,11 @@
     <dimen name="padding_large">20dp</dimen>
     <dimen name="padding_extra_large">32dp</dimen>
 
+    <dimen name="negative_padding_extra_small">-4dp</dimen>
+    <dimen name="negative_padding_small">-8dp</dimen>
+    <dimen name="negative_padding_medium">-16dp</dimen>
+
     <dimen name="content_padding">8dp</dimen>
-    <dimen name="top_app_bar_height">64dp</dimen>
-    <dimen name="bottom_navigation_height">72dp</dimen>
     <dimen name="inventory_search_bar_height">48dp</dimen>
 
     <dimen name="icon_button_small">24dp</dimen>
@@ -22,4 +24,7 @@
     <dimen name="inventory_item_image_width">64dp</dimen>
     <dimen name="inventory_item_card_height">80dp</dimen>
     <dimen name="entry_image_size">128dp</dimen>
+
+    <dimen name="app_bar_height_medium">64dp</dimen>
+    <dimen name="app_bar_height_large">72dp</dimen>
 </resources>
