Add Home Screen Content
This commit adds content to the home screen which are the following:
out of stock and low on stock counter cards, and a list of products
arranged by the number sold or revenue earned in the last 30 days.

* Add out of stock and low on stock counter cards.
* Add product statistics list.
* Add product statistics list adapter and item layout.
* Change home view model sorting functions to accommodate list adapter.
* Change HomeViewModel to use first() instead of collect() functions for flows.
* Refactor dimen resources names.
* Add string resources for home screen.
* Change ProductSale class to have embedded product value.
* Change getProductSalesFromDates to LEFT JOIN Products table.
* Fix issue in countLowOnStock where comparison is = :max to <= :max.
* Move some functions in HomeFragment onCreateView to onViewCreated.
* Add binding clean up in HomeFragment

--- a/app/src/main/res/layout/inventory_list_item.xml
+++ b/app/src/main/res/layout/inventory_list_item.xml
@@ -83,8 +83,8 @@
 
             <ImageButton
                 android:id="@+id/deleteButton"
-                android:layout_width="@dimen/icon_button_small"
-                android:layout_height="@dimen/icon_button_small"
+                android:layout_width="@dimen/icon_small"
+                android:layout_height="@dimen/icon_small"
                 android:adjustViewBounds="true"
                 android:background="?attr/selectableItemBackground"
                 android:contentDescription="@string/delete"
