--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,62 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
-            name="viewModel"
-            type="com.mobile_programming.sari_sari_inventory_app.ui.home.HomeViewModel" />
+            name="uiState"
+            type="com.mobile_programming.sari_sari_inventory_app.ui.home.HomeUiState" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/top_app_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            android:minHeight="?attr/actionBarSize"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:titleCentered="true" />
 
-            <com.google.android.material.appbar.AppBarLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@id/bot_nav_bar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/top_app_toolbar">
+
+            <include
+                android:id="@+id/out_of_stock_card"
+                layout="@layout/out_of_stock_card"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/home_indicator_card_height"
+                android:layout_marginVertical="@dimen/padding_small"
+                android:layout_marginStart="@dimen/padding_medium"
+                android:layout_marginEnd="@dimen/padding_extra_small"
+                app:layout_constraintEnd_toStartOf="@id/low_on_stock_card"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <include
+                android:id="@+id/low_on_stock_card"
+                layout="@layout/low_on_stock_card"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/home_indicator_card_height"
+                android:layout_marginVertical="@dimen/padding_small"
+                android:layout_marginStart="@dimen/padding_extra_small"
+                android:layout_marginEnd="@dimen/padding_medium"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/out_of_stock_card"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/product_stats_card"
+                style="@style/Widget.Material3.CardView.Outlined"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="0dp"
+                android:layout_margin="@dimen/padding_medium"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/out_of_stock_card">
 
-                <com.google.android.material.appbar.MaterialToolbar
-                    android:id="@+id/top_app_toolbar"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/app_bar_height_medium"
-                    android:fitsSystemWindows="true"
-                    android:minHeight="?attr/actionBarSize"
-                    app:layout_scrollFlags="scroll|enterAlways"
-                    app:title=""
-                    app:titleCentered="true" />
-            </com.google.android.material.appbar.AppBarLayout>
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-            <!-- Add Home Screen Content Here -->
+                    <view
+                        android:id="@+id/product_stats_tab_layout"
+                        class="com.google.android.material.tabs.TabLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-            <com.google.android.material.bottomappbar.BottomAppBar
-                android:id="@+id/bot_app_bar"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/app_bar_height_large"
-                android:layout_gravity="bottom"
-                app:fabAlignmentMode="end"
-                app:fabAnimationMode="slide"
-                app:fabAnchorMode="cradle"
-                app:fabCradleVerticalOffset="@dimen/fab_bottom_app_bar_vert_margin"
-                app:hideOnScroll="true"
-                app:layout_scrollFlags="scroll|enterAlways">
+                        <com.google.android.material.tabs.TabItem
+                            android:id="@+id/number_sold_tab"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/sort_by_sold" />
 
-                <!-- Bottom Navigation -->
-                <com.google.android.material.bottomnavigation.BottomNavigationView
-                    android:id="@+id/bot_nav_bar"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/app_bar_height_large"
-                    app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
-                    app:menu="@menu/bottom_navigation_menu"
-                    app:elevation="0dp"/>
+                        <com.google.android.material.tabs.TabItem
+                            android:id="@+id/revenue_earned_tab"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/sort_by_profit" />
 
-            </com.google.android.material.bottomappbar.BottomAppBar>
+                    </view>
 
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/product_stats_recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        tools:itemCount="10"
+                        tools:listitem="@layout/home_product_stats_list_item" />
+                </LinearLayout>
+
+            </com.google.android.material.card.MaterialCardView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!-- Bottom Navigation -->
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bot_nav_bar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/app_bar_height_large"
+            app:elevation="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/bottom_navigation_menu" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
