--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -73,8 +73,8 @@
 
             <ImageButton
                 android:id="@+id/sortMenuButton"
-                android:layout_width="@dimen/icon_button_medium"
-                android:layout_height="@dimen/icon_button_medium"
+                android:layout_width="@dimen/icon_medium"
+                android:layout_height="@dimen/icon_medium"
                 android:layout_marginStart="@dimen/padding_medium"
                 android:layout_marginEnd="@dimen/padding_large"
                 android:adjustViewBounds="true"
