Add Settings Screen
This commit adds a setting screen, along with required resourced and
functions. The screen only contains a dark theme switch.

This commit also adds a preferences data store to the repository as well as
a ViewModel for the main activity to update app theme when opening.

* Change application and activity theme in AndroidManifest.xml.
* Move SariSariInventoryAppTheme.Dark to themes.xml (night).
* Change SariSariInventoryAppTheme.Light/Dark to SariSariInventoryAppTheme only
* Change bottom nav bar menu items ids to fragment Ids.
* Add Preferences DataStore dependency.
* Add UserPreferences api, helper class, and constants.
* Remove insets in fragment_inventory.xml bottom app bar.
* Add MainActivityViewModel.kt.
* Add preferencesDatastore to InventoryRepository.
* Fix wrong UI colors in some screen elements when in dark mode.

--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -106,6 +106,8 @@
             android:id="@+id/bot_app_bar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/app_bar_height_large"
+            app:contentInsetStart="0dp"
+            app:contentInsetEnd="0dp"
             android:layout_gravity="bottom"
             app:fabAlignmentMode="end"
             app:fabAnimationMode="slide"
