--- a/app/src/main/res/layout/fragment_product_entry.xml
+++ b/app/src/main/res/layout/fragment_product_entry.xml
@@ -23,8 +23,9 @@
                 android:layout_height="@dimen/app_bar_height_medium"
                 android:fitsSystemWindows="true"
                 android:minHeight="?attr/actionBarSize"
-                app:navigationIcon="@drawable/baseline_arrow_back_24"
                 app:menu="@menu/product_entry_top_app_bar_menu"
+                app:navigationIcon="@drawable/baseline_arrow_back_24"
+                app:navigationIconTint="?attr/colorOnSurface"
                 app:title="@string/new_product"
                 app:titleCentered="true" />
         </com.google.android.material.appbar.AppBarLayout>
@@ -44,15 +45,15 @@
                     android:id="@+id/product_image"
                     android:layout_width="@dimen/entry_image_size"
                     android:layout_height="@dimen/entry_image_size"
-                    android:contentDescription="@string/new_product_image_content_desc"
-                    android:src="@drawable/baseline_camera_alt_24"
-                    app:contentPadding="@dimen/padding_extra_large"
-                    android:scaleType="centerCrop"
-                    app:layout_constraintStart_toStartOf="@id/product_number_field"
-                    app:layout_constraintTop_toTopOf="parent"
                     android:background="@drawable/dashed_line_border"
                     android:backgroundTint="?attr/colorOutline"
-                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"/>
+                    android:contentDescription="@string/new_product_image_content_desc"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/baseline_camera_alt_24"
+                    app:contentPadding="@dimen/padding_extra_large"
+                    app:layout_constraintStart_toStartOf="@id/product_number_field"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large" />
 
                 <Button
                     android:id="@+id/add_photo_button"
